--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -2,116 +2,110 @@
 @tablet: 768px;
 @desktop: 1220px;
 
-.communicating {
+.map__communicating {
   padding-top: 28px;
   padding-bottom: 26px;
-
 }
 
-.communicating__main-text {
+.map__communicating-main-text {
   max-width: 280px;
   margin: 0 auto;
   display: flex;
 }
 
-
-
-.communicating__address-index {
+.map__communicating__address-index {
   margin-top: -1px;
 }
 
-@media (min-width:@mobile) {
-  .communicating__main-text {
+@media (min-width: @mobile) {
+  .map__communicating-main-text {
     max-width: 280px;
     margin: 0 auto;
     display: flex;
+  }
+
+  .map__communicating-address {
+    font-family: "Arial", "Tahoma", sans-serif;
+    max-width: 135px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .map__communicating-offer-communicating {
+    max-width: 122px;
+    font-size: 16px;
+    line-height: 20px;
+    color: #111111;
+    text-transform: uppercase;
+    font-family: "Oswald-Regular", "Arial", sans-serif;
+    margin-right: 19px;
+  }
+
+  .map__communicating-form {
+    background-color: #f2f2f2;
+    max-width: 320px;
+    margin: 0 auto;
+  }
 }
 
-.communicating__address {
-  font-family: "Arial", "Tahoma", sans-serif;
-  max-width: 135px;
-  font-size: 14px;
-  line-height: 20px;
-}
-
-.communicating__offer-communicating {
-  max-width: 122px;
-  font-size: 16px;
-  line-height: 20px;
-  color: #111111;
-  text-transform: uppercase;
-  font-family: "Oswald-Regular", "Arial", sans-serif;
-  margin-right: 19px;
-}
-
-.communicating-form {
-  background-color: #f2f2f2;
-  max-width: 320px;
-  margin: 0 auto;
-}
-
-}
-
-@media (min-width:@tablet) {
-  .communicating-form {
+@media (min-width: @tablet) {
+  .map__communicating-form {
     max-width: 768px;
     margin-top: 77px;
-    background-color: #f2f2f2;
-}
+    background-color: #ffffff;
+  }
 
-.communicating__main-text {
-  max-width: 700px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-}
+  .map__communicating-main-text {
+    max-width: 700px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+  }
 
-.communicating__offer-communicating {
-  margin-top: 38px;
-  font-size: 20px;
-  line-height: 25px;
-  margin-left: 37px;
-  max-width: 190px;
-}
+  .map__communicating-offer-communicating {
+    margin-top: 38px;
+    font-size: 20px;
+    line-height: 25px;
+    margin-left: 37px;
+    max-width: 190px;
+  }
 
-.communicating__address {
-  text-align: right;
-  margin-right: 38px;
-  margin-top: 36px;
-  line-height: 19px;
-  font-size: 16px;
-  line-height: 20px;
-  max-width: 185px;
-}
+  .map__communicating-address {
+    text-align: right;
+    margin-right: 38px;
+    margin-top: 36px;
+    line-height: 19px;
+    font-size: 16px;
+    line-height: 20px;
+    max-width: 185px;
+  }
 
-.communicating__address-city {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 20px;
-}
+  .map__communicating-address-city {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+  }
 
-.communicating__index {
-  padding-top: 17px;
-  padding-bottom: 57px;
-}
-
-
+  .communicating__index {
+    padding-top: 17px;
+    padding-bottom: 57px;
+  }
 }
 
 @media (min-width:@desktop) {
-  .communicating-form {
+  .map__communicating-form {
     position: absolute;
     z-index: 1000;
     max-width: 570px;
     left: 110px;
-    top: 23px;
-}
+    top: 17px;
+  }
 
-.communicating-catalog-block {
-  padding-bottom: 54px;
-}
+  .map__communicating--catalog-block {
+    padding-bottom: 54px;
+  }
 
-  .communicating__index {
+  .map__communicating-index {
     padding-top: 26px;
     padding-bottom: 59px;
     position: absolute;
@@ -121,34 +115,49 @@
     left: 110px;
     padding-right: 3px;
     margin-top: 0px;
-}
+  }
 
+  .map__communicating-offer-communicating {
+    margin-top: 40px;
+    font-size: 20px;
+    line-height: 25px;
+    margin-left: 75px;
+    max-width: 190px;
+    margin-right: 61px;
+  }
 
-.communicating__offer-communicating {
-  margin-top: 33px;
-  font-size: 20px;
-  line-height: 25px;
-  margin-left: 75px;
-  max-width: 190px;
-  margin-right: 61px;
-}
+  .map__communicating-address {
+    text-align: left;
+    margin-right: 56px;
+    margin-top: 37px;
+    max-width: 185px;
+  }
 
-.communicating__address {
-  text-align: left;
-  margin-right: 56px;
-  margin-top: 37px;
-}
+  .map__communicating__we-offer-form {
+    margin-top: 36px;
+  }
 
-.communicating__address-city {
-  justify-content: left;
-  text-align: right;
-  margin-left: 0px;
-  display: flex;
-}
-.communicating__address-catalog {
-  text-align: left;
-  margin-right: 56px;
-  margin-top: 31px;
+  .map__communicating-address-city {
+    justify-content: left;
+    text-align: right;
+    margin-left: 0px;
+    display: flex;
+  }
+
+  .map__communicating__address-form {
+    margin-top: 35px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .map__communicating-address-catalog {
+    text-align: left;
+    margin-right: 56px;
+    margin-top: 36px;
+  }
+
+.communicating__address-city--form {
+  margin-top: 20px;
 }
 
 }
