--- a/source/less/find-all-goods.less
+++ b/source/less/find-all-goods.less
@@ -13,6 +13,15 @@
   border-right: 1px solid #ededed;
 }
 
+.find-all-goods__show-all-goods:hover {
+background-color:#ebebeb;
+}
+
+.find-all-goods__show-all-goods:active {
+  background-color:#ebebeb;
+color: #b9b9b9;
+}
+
 .find-all-goods__plus-mobile-img {
   margin-bottom: 24px;
 }
