--- a/source/less/how-it-is-work.less
+++ b/source/less/how-it-is-work.less
@@ -2,9 +2,6 @@
 @tablet: 768px;
 @desktop: 1220px;
 
-
-
-
 .how-it-is-work__green {
   margin-right: 21px;
   width: 60px;
@@ -27,7 +24,6 @@
   max-width: 194px;
 }
 
-
 .how-it-is-work__sub-clock {
   margin-top: 7px;
 }
@@ -36,14 +32,16 @@
   max-width: 194px;
 }
 
-@media (min-width:@mobile) {
+@media (min-width: @mobile) {
   .how-it-is-work__sub-powder {
     margin-top: 5px;
     margin-bottom: 20px;
   }
+
   .works-item__image {
     margin-top: 5px;
   }
+
   .how-it-is-work__header {
     font-size: 36px;
     line-height: 60px;
@@ -57,6 +55,7 @@
     margin-bottom: 20px;
     align-items: center;
   }
+
   .how-it-is-work {
     padding-top: 15px;
     max-width: 280px;
@@ -65,82 +64,93 @@
     display: flex;
     flex-direction: column;
   }
-
 }
 
-@media (min-width:@tablet) {
-  .how-it-is-work {
-    max-width: 708px;
-  }
+@media (min-width: @tablet) {
   .how-it-is-work__header {
-    margin-left: 0px;
+    margin-left: 0;
     font-size: 60px;
     line-height: 60px;
     font-weight: normal;
     margin-top: 30px;
     margin-bottom: 33px;
   }
+
   .how-it-is-work__green {
     width: 80px;
     height: 80px;
   }
+
   .how-it-is-work__sub-two-items {
     display: flex;
   }
+
   .how-it-is-work__sub-two-items:nth-child(1n) {
     margin-top: 41px;
   }
+
   .how-it-is-work__sub-two-items:last-child {
     margin-top: 69px;
   }
+
   .how-it-is-work__sub {
     flex-direction: column;
     align-items: flex-start;
   }
+
   .how-it-is-work__powder {
-    margin-top: 0px;
+    margin-top: 0;
     margin-left: 182px;
   }
+
   .how-it-is-work__sub-text-first-child {
     max-width: 202px;
     margin-top: 33px;
   }
+
   .how-it-is-work__sub-text-second-child {
     max-width: 222px;
     margin-top: 33px;
   }
+
   .how-it-is-work__sub-text-third-child {
     max-width: 204px;
     margin-top: 33px;
   }
+
   .how-it-is-work__sub-text-fourth-child {
     max-width: 245px;
     margin-top: 34px;
   }
+
   .how-it-is-work__sub-text {
     font-size: 16px;
     line-height: 24px;
   }
+
   .how-it-is-work__sub-first-child {
-    background-image: url(../img/one.png);
+    background-image: url("../img/one.png");
     background-repeat: no-repeat;
     background-position: 127px 1px;
     padding-bottom: 42px;
   }
+
   .how-it-is-work__sub-second-child {
-  background-image: url("../img/two.png");
-  background-repeat: no-repeat;
-  background-position: 122px -2px;
-  padding-bottom: 42px;
-  padding-right: 21px;
+    background-image: url("../img/two.png");
+    background-repeat: no-repeat;
+    background-position: 122px -2px;
+    padding-bottom: 42px;
+    padding-right: 21px;
   }
+
   .how-it-is-work__sub-third-child {
-    background-image: url(../img/three.png);
+    background-image: url("../img/three.png");
     background-repeat: no-repeat;
     background-position: 123px 1px;
     padding-bottom: 52px;
     padding-right: 40px;
   }
+
   .how-it-is-work__sub-fourth-child {
     background-image: url("../img/four.png");
     background-repeat: no-repeat;
@@ -149,52 +159,59 @@
     margin-top: 0;
     margin-left: 140px;
   }
+
   .how-it-is-work {
     margin-bottom: 7px;
-    padding-left: 0px;
+    padding-left: 0;
     padding-top: 13px;
+    max-width: 708px;
   }
 }
 
-@media (min-width:@desktop) {
+@media (min-width: @desktop) {
   .how-it-is-work {
     max-width: 1220px;
   }
+
   .how-it-is-work__header {
-    margin-top: 60px;
+    margin-top: 39px;
   }
+
   .how-it-is-work__sub-two-items-main {
     display: flex;
-  }
-  .how-it-is-work__powder {
-    margin-top: 0px;
-    margin-left: 122px;
-}
-.how-it-is-work__sub-two-items:last-child {
-  margin-top: 41px;
-}
-.how-it-is-work__sub-third-child {
-  background-image: url(../img/three.png);
-  background-repeat: no-repeat;
-  background-position: 123px 1px;
-  padding-bottom: 52px;
-  padding-right: 40px;
-  margin-left: 83px;
-}
-.how-it-is-work__sub-fourth-child {
-  background-image: url(../img/four.png);
-  background-repeat: no-repeat;
-  background-position: 127px 1px;
-  padding-bottom: 42px;
-  margin-top: 0;
-  margin-left: 79px;
-}
-.how-it-is-work__sub-text {
-  font-size: 16px;
-  line-height: 24px;
-  margin-top: 32px;
-}
-.how-it-is-work__sub-two-items-main {
     margin-top: -2px;
-}
+  }
+
+  .how-it-is-work__powder {
+    margin-top: 0;
+    margin-left: 122px;
+  }
+
+  .how-it-is-work__sub-two-items:last-child {
+    margin-top: 41px;
+  }
+
+  .how-it-is-work__sub-third-child {
+    background-image: url("../img/three.png");
+    background-repeat: no-repeat;
+    background-position: 123px 1px;
+    padding-bottom: 52px;
+    padding-right: 40px;
+    margin-left: 83px;
+  }
+
+  .how-it-is-work__sub-fourth-child {
+    background-image: url("../img/four.png");
+    background-repeat: no-repeat;
+    background-position: 127px 1px;
+    padding-bottom: 42px;
+    margin-top: 0;
+    margin-left: 79px;
+  }
+
+  .how-it-is-work__sub-text {
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 32px;
+  }
 }
