--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -30,6 +30,14 @@
 @retina-dpi: 144dpi;
 @retina-dppx: 1.5dppx;
 
+.page-header__menu-main-sub-menu-elem-link--form:hover {
+  color: #707070;
+}
+
+.page-header__menu-main-sub-menu-elem-link--form:active {
+  color: #b7b7b7;
+}
+
 .page-header__menu-main-sub-menu-elem:last-child {
   border-bottom: 1px solid #ededed;
 }
@@ -44,9 +52,10 @@
   text-transform: uppercase;
   margin-left: 1px;
 }
+
 .page-header__menu-main-sub-menu-elem-link--form {
   color: #222222;
-  }
+}
 
 .page-header__menu-main {
   text-align: center;
@@ -67,9 +76,17 @@
     display: block;
   }
 
-.page-header__menu-main-sub-menu-elem-link--form {
-color: #222222;
-}
+  .page-header__menu-main-sub-menu-elem-link--index:hover {
+    color: #707070;
+  }
+
+  .page-header__menu-main-sub-menu-elem-link--index:active {
+    color: #b7b7b7;
+  }
+
+  .page-header__menu-main-sub-menu-elem-link--form {
+    color: #222222;
+  }
 
   .page-header__logo-site-image-tablet {
     display: none;
@@ -115,7 +132,7 @@ color: #222222;
 
   .page-header__menu-main-sub-menu-elem-link--form {
     color: #222222;
-    }
+  }
 
   .page-header__logo-site-image-mobile {
     display: none;
@@ -173,9 +190,18 @@ color: #222222;
     border-bottom: 1px solid #68b738;
     padding-bottom: 6px;
   }
+
   .page-header__menu-main-sub-menu-elem-link--active {
     border-bottom: 1px solid #68b738;
     padding-bottom: 7px;
+  }
+
+  .page-header__menu-main-sub-menu-elem-link--index:hover {
+    color: #707070;
+  }
+
+  .page-header__menu-main-sub-menu-elem-link--index:active {
+    color: #b7b7b7;
   }
 }
 
@@ -188,14 +214,33 @@ color: #222222;
     padding-left: 0;
   }
 
-  .page-header__menu-main-sub-menu-elem-link--catalog-active {
-    padding-bottom: 8px;
-    border-bottom: 2px solid #68b738;
+  .page-header__form--li-active {
+    position: relative;
   }
 
-  .page-header__menu-main-sub-menu-elem-link--form {
-    color: #222222;
-    }
+  .page-header__form--li-active::after {
+    content: "";
+    position: absolute;
+    bottom: 11px;
+    width: 100%;
+    height: 2px;
+    background-color: #68b738;
+    left: 0;
+  }
+
+  .page-header__menu-main-sub-menu-elem-li--catalog-active {
+    position: relative;
+  }
+
+  .page-header__menu-main-sub-menu-elem-li--catalog-active::after {
+    content: "";
+    position: absolute;
+    bottom: 9px;
+    width: 100%;
+    height: 2px;
+    background-color: #68b738;
+    left: 0;
+  }
 
   .page-header__menu-main {
     margin-top: 7px;
@@ -222,30 +267,70 @@ color: #222222;
     font-size: 20px;
     line-height: 24.86px;
     color: #ffffff;
+    word-break: break-word;
   }
-  .page-header__menu-main-sub-menu-elem-link--form{
+
+  .page-header__menu-main-sub-menu-elem-link--form {
     color: #222222;
   }
+
   .page-header__menu {
     justify-content: space-between;
+    align-items: center;
+  }
+
+  .page-header__menu-main-sub-menu-elem-link--catalog {
+    font-size: 20px;
+    line-height: 24.86px;
+    color: #111111;
+  }
+
+  .page-header__menu-main-sub {
+    max-width: 895px;
+    flex-wrap: wrap;
   }
 
   .page-header__menu-main-sub-menu-elem {
+    max-width: 172px;
     margin-right: 33px;
+  }
+
+  .page-header__menu-main-sub-menu-elem-link--index:hover {
+    color: #b3d1a4;
   }
 
   .page-header__menu-main-sub-menu-elem-link--index {
     color: #ffffff;
   }
 
-  .page-header__menu-main-sub-menu-elem-link--active {
-    border-bottom: 1px solid #ffffff;
-    padding-bottom: 7px;
+  .page-header__menu-main-sub-menu-elem-link--index:active {
+    color: #8cc16c;
   }
-.page-header__menu-main-sub-menu-elem-link--catalog {
-  font-size: 20px;
-  line-height: 24.86px;
-  color: #111111;
-}
-}
 
+  .page-header__logo-site-image-desktop:hover {
+    opacity: 75%;
+  }
+
+  .page-header__logo-site-image-desktop:active {
+    opacity: 50%;
+  }
+
+  .page-header__form--link-active {
+    padding-bottom: 8px;
+    border-bottom: 1px solid #68b738;
+  }
+
+  .page-header__menu-main-sub-menu-elem-li--active {
+    position: relative;
+  }
+
+  .page-header__menu-main-sub-menu-elem-li--active::after {
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    left: 0;
+    bottom: 9px;
+    content: "";
+    position: absolute;
+  }
+}
