--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -8,6 +8,22 @@
   flex-direction: column;
 }
 
+.programs {
+  flex-wrap: wrap;
+}
+
+.programs__icon-right-arrow-very-long {
+  display: none;
+}
+
+.programs__program-link:hover {
+  color: #111111;
+}
+
+.programs__program-link:active {
+  color: #b7b7b7;
+}
+
 .programs__header-program {
   display: flex;
   margin-bottom: 23px;
@@ -21,7 +37,7 @@
   font-family: "Oswald-Regular", "Arial", sans-serif;
 }
 
-.programs__program:first-child {
+.programs__program--standing-cat {
   padding: 22px 34px 23px 21px;
   margin-bottom: 20px;
   margin-top: 22px;
@@ -137,7 +153,7 @@
     font-weight: normal;
   }
 
-  .programs__program:first-child {
+  .programs__program--standing-cat {
     padding: 69px 280px 63px 52px;
     margin-bottom: 28px;
   }
@@ -194,12 +210,7 @@
     margin-top: 44px;
   }
 
-  .programs__icon-right-arrow-long {
-    display: none;
-  }
-
   .programs__icon-right-arrow-very-long {
-    display: block;
     width: 25px;
     height: 12px;
     margin-left: 12px;
@@ -251,10 +262,10 @@
     max-width: 570px;
   }
 
-  .programs__program:first-child {
+  .programs__program--standing-cat {
     padding: 41px 0 62px 0;
     max-width: 570px;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     margin-top: -4px;
   }
 
@@ -331,5 +342,21 @@
     font-weight: normal;
     margin-left: 43px;
     margin-top: 31px;
+  }
+
+  .programs__name {
+    max-width: 325px;
+  }
+
+  .programs__program-link {
+    max-width: 108px;
+  }
+
+  .how-it-is-work__header {
+    max-width: 600px;
+  }
+
+  .how-it-is-work__sub {
+    max-width: 245px;
   }
 }
