--- a/source/less/style.css
+++ b/source/less/style.css
@@ -19,6 +19,12 @@
   padding: 0;
   margin: 0;
 }
+.page-header__menu-main-sub-menu-elem-link--form:hover {
+  color: #707070;
+}
+.page-header__menu-main-sub-menu-elem-link--form:active {
+  color: #b7b7b7;
+}
 .page-header__menu-main-sub-menu-elem:last-child {
   border-bottom: 1px solid #ededed;
 }
@@ -49,6 +55,12 @@
 @media (min-width: 320px) {
   .page-header__logo-site-image-mobile {
     display: block;
+  }
+  .page-header__menu-main-sub-menu-elem-link--index:hover {
+    color: #707070;
+  }
+  .page-header__menu-main-sub-menu-elem-link--index:active {
+    color: #b7b7b7;
   }
   .page-header__menu-main-sub-menu-elem-link--form {
     color: #222222;
@@ -140,6 +152,12 @@
     border-bottom: 1px solid #68b738;
     padding-bottom: 7px;
   }
+  .page-header__menu-main-sub-menu-elem-link--index:hover {
+    color: #707070;
+  }
+  .page-header__menu-main-sub-menu-elem-link--index:active {
+    color: #b7b7b7;
+  }
 }
 @media (min-width: 1220px) {
   .page-header__menu-logos-links {
@@ -148,6 +166,10 @@
     margin-top: 7px;
     max-width: 202px;
     padding-left: 0;
+  }
+  .page-header__menu-main-sub-menu-elem-link--catalog-active {
+    padding-bottom: 8px;
+    border-bottom: 2px solid #68b738;
   }
   .page-header__menu-main-sub-menu-elem-link--form {
     color: #222222;
@@ -194,6 +216,29 @@
     line-height: 24.86px;
     color: #111111;
   }
+  .page-header__menu-main-sub {
+    max-width: 895px;
+    flex-wrap: wrap;
+  }
+  .page-header__menu-main-sub-menu-elem {
+    max-width: 172px;
+  }
+  .page-header__menu-main-sub-menu-elem-link--index:hover {
+    color: #b3d1a4;
+  }
+  .page-header__menu-main-sub-menu-elem-link--index:active {
+    color: #8cc16c;
+  }
+  .page-header__logo-site-image-desktop:hover {
+    opacity: 75%;
+  }
+  .page-header__logo-site-image-desktop:active {
+    opacity: 50%;
+  }
+  .page-header__form--link-active {
+    padding-bottom: 8px;
+    border-bottom: 1px solid #68b738;
+  }
 }
 @font-face {
   font-family: 'fontello';
@@ -217,7 +262,6 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  speak: none;
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
@@ -432,10 +476,12 @@
     margin-left: 79px;
     margin-bottom: 0px;
     margin-top: 14px;
+    max-width: 414px;
   }
   .header-background__work-for-your-cat {
     margin-bottom: 6px;
     margin-left: 80px;
+    max-width: 284px;
   }
   .menu-main__sub-menu-elem {
     padding-top: 15px;
@@ -451,12 +497,20 @@
   }
   .check-your-program {
     margin-bottom: 248px;
+    max-width: 192px;
   }
   .header-background__img {
     position: absolute;
     top: 10px;
     right: 219px;
     left: 450px;
+  }
+  .check-your-program:hover {
+    background-color: #5eaa2f;
+  }
+  .check-your-program:active {
+    background-color: #5eaa2f;
+    color: #8fc46e;
   }
 }
 @media (min-width: 1220px) and (min-resolution: 144dpi), (min-width: 1220px) and (min-resolution: 1.5dppx) {
@@ -470,6 +524,18 @@
   display: flex;
   flex-direction: column;
 }
+.programs {
+  flex-wrap: wrap;
+}
+.programs__icon-right-arrow-very-long {
+  display: none;
+}
+.programs__program-link:hover {
+  color: #111111;
+}
+.programs__program-link:active {
+  color: #b7b7b7;
+}
 .programs__header-program {
   display: flex;
   margin-bottom: 23px;
@@ -481,7 +547,7 @@
   text-transform: uppercase;
   font-family: "Oswald-Regular", "Arial", sans-serif;
 }
-.programs__program:first-child {
+.programs__program--standing-cat {
   padding: 22px 34px 23px 21px;
   margin-bottom: 20px;
   margin-top: 22px;
@@ -577,7 +643,7 @@
     line-height: 37.02px;
     font-weight: normal;
   }
-  .programs__program:first-child {
+  .programs__program--standing-cat {
     padding: 69px 280px 63px 52px;
     margin-bottom: 28px;
   }
@@ -624,11 +690,7 @@
     margin-left: -57px;
     margin-top: 44px;
   }
-  .programs__icon-right-arrow-long {
-    display: none;
-  }
   .programs__icon-right-arrow-very-long {
-    display: block;
     width: 25px;
     height: 12px;
     margin-left: 12px;
@@ -671,10 +733,10 @@
   .programs__program {
     max-width: 570px;
   }
-  .programs__program:first-child {
+  .programs__program--standing-cat {
     padding: 41px 0 62px 0;
     max-width: 570px;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     margin-top: -4px;
   }
   .programs__img_program {
@@ -738,6 +800,18 @@
     font-weight: normal;
     margin-left: 43px;
     margin-top: 31px;
+  }
+  .programs__name {
+    max-width: 325px;
+  }
+  .programs__program-link {
+    max-width: 108px;
+  }
+  .how-it-is-work__header {
+    max-width: 600px;
+  }
+  .how-it-is-work__sub {
+    max-width: 245px;
   }
 }
 .how-it-is-work__green {
@@ -886,7 +960,7 @@
     max-width: 1220px;
   }
   .how-it-is-work__header {
-    margin-top: 60px;
+    margin-top: 39px;
   }
   .how-it-is-work__sub-two-items-main {
     display: flex;
@@ -928,6 +1002,22 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+}
+.live-example__slider-button-became:hover {
+  padding-bottom: 7px;
+  border-bottom: 1px solid #989898;
+}
+.live-example__slider-button-became:active {
+  padding-bottom: 7px;
+  border: 0;
+}
+.live-example__slider-button--was:hover {
+  padding-bottom: 7px;
+  border-bottom: 1px solid #989898;
+}
+.live-example__slider-button--was:active {
+  padding-bottom: 7px;
+  border: 0;
 }
 .live-example__header {
   font-family: "Oswald-Regular", "Arial", sans-serif;
@@ -1329,7 +1419,7 @@
   .live-example__header {
     font-size: 60px;
     line-height: 60px;
-    margin-top: -15px;
+    margin-top: 7px;
     margin-bottom: 74px;
     margin-left: 0;
     display: flex;
@@ -1358,7 +1448,7 @@
   .live-example__sub {
     font-size: 16px;
     line-height: 24px;
-    margin-bottom: 53px;
+    margin-bottom: 50px;
     margin-left: 80px;
     max-width: 432px;
     margin-top: 71px;
@@ -1434,7 +1524,7 @@
   .live-example__slider-on-off-content {
     border: 1px solid #cdcdcd;
     background-color: #dcdcdc;
-    width: 426px;
+    width: 424px;
     border-radius: 15px;
     margin-top: 7px;
     height: 3px;
@@ -1453,7 +1543,7 @@
     border-bottom: 1px dotted #bebebe;
   }
   .live-example__how-many-u-spent {
-    margin-left: 0px;
+    margin-left: -2px;
   }
   .live-example__slider {
     padding-bottom: 18px;
@@ -1499,6 +1589,9 @@
     background-color: transparent;
     background-repeat: no-repeat;
     background-image: url(../img/after-desktop@1x.png);
+  }
+  .live-example__header {
+    max-width: 650px;
   }
 }
 .communicating {
@@ -1612,6 +1705,7 @@
     text-align: left;
     margin-right: 56px;
     margin-top: 37px;
+    max-width: 185px;
   }
   .communicating__address-city {
     justify-content: left;
@@ -1681,6 +1775,9 @@
   max-width: 320px;
   margin: 0 auto;
 }
+.right-logo__logo-organization:hover {
+  fill: red;
+}
 .footer__logo {
   width: 100%;
   text-align: center;
@@ -1705,7 +1802,7 @@
   font-family: "Arial", "Tahoma", sans-serif;
   color: #444444;
   text-decoration: none;
-  margin-right: 139px;
+  margin-right: 131px;
 }
 .footer__social-links-catalog {
   margin-top: 23px;
@@ -1757,6 +1854,10 @@
   }
   .footer__social-links-li:first-child {
     margin-right: -7px;
+  }
+  .right-logo__logo-organization {
+    width: 35px;
+    height: 35px;
   }
 }
 @media (min-width: 768px) {
@@ -1852,7 +1953,7 @@
   }
   .footer__social-links-li:first-child {
     margin-right: -7px;
-    padding-left: 6px;
+    padding-left: 2px;
   }
   .footer__social-links-li-facebook {
     margin-left: -10px;
@@ -1887,6 +1988,13 @@
   .footer__social-links-li {
     margin-right: 7px;
   }
+  .right-logo__logo-organization {
+    width: 35px;
+    height: 42px;
+  }
+  .footer__right-logo:hover .right-logo__logo-organization {
+    fill: red;
+  }
 }
 /* LESS Document */
 .main-form__radio-part {
@@ -1895,6 +2003,36 @@
   margin-top: 9px;
   border: 1px solid #ededed;
   padding-left: 18px;
+}
+.form__sub-label-input-name:hover {
+  border: 1px solid #cdcdcd;
+}
+.form__sub-label-input-name:active {
+  border: 1px solid #444444;
+  outline: 0;
+}
+.form__sub-label-input-weight:hover {
+  border: 1px solid #cdcdcd;
+}
+.form__sub-label-input-weight:active {
+  border: 1px solid #444444;
+  outline: 0;
+}
+.form__sub-input-age:hover {
+  border: 1px solid #cdcdcd;
+}
+.form__sub-input-age:active {
+  border: 1px solid #444444;
+  outline: 0;
+}
+.input-error {
+  border: 1px solid #ff8282;
+}
+.form__sub-radio:active {
+  opacity: 50%;
+}
+.form__checkbox-label:active {
+  opacity: 50%;
 }
 .form__sub-label-input-radio {
   font-family: "Oswald-Regular", "Arial", sans-serif;
@@ -2563,6 +2701,7 @@
   }
   .form__sub-checkbox {
     margin-bottom: 39px;
+    max-width: 326px;
   }
   .form__sub-label-sugarchange {
     margin-top: 13px;
@@ -2645,6 +2784,16 @@
   .main-form__how-u-can-choose-program {
     margin-top: 57px;
     margin-left: 1px;
+    max-width: 570px;
+  }
+  .form__contact-data-for-cat-owner {
+    max-width: 512px;
+  }
+  .form__first-three-inputs {
+    max-width: 570px;
+  }
+  .form__sub-radio {
+    max-width: 534px;
   }
   .main-form__full-anket {
     margin-left: 0;
@@ -2725,7 +2874,7 @@
     top: 8px;
   }
   .form__sub-input-radio:checked + .form__sub-label-input-radio::before {
-    left: 23px;
+    left: 21px;
   }
   .form__first-three-inputs {
     margin-bottom: 1px;
@@ -2757,6 +2906,10 @@
   .form__contact__email-plus-phone {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .form__commentary-comment {
+    max-width: 180px;
   }
   .form__contact-data-cat-owner-telephone {
     width: 46.72%;
@@ -2925,6 +3078,9 @@
   }
   .map__iframe-form {
     height: 400px;
+  }
+  .main-catalog__main-text {
+    max-width: 570px;
   }
 }
 .hidden {
@@ -3188,9 +3344,9 @@
     top: -85px;
   }
   .main__catalog--fourth-image {
-    top: -83px;
-    width: 390px;
-    left: -72px;
+    top: -86px;
+    width: 327px;
+    left: -38px;
   }
   .main__catalog--fifth-image {
     width: 327px;
@@ -3213,7 +3369,7 @@
   }
   .main-catalog__good {
     background-color: #f2f2f2;
-    margin-bottom: 142px;
+    margin-bottom: 146px;
     padding-bottom: 37px;
     max-width: 245px;
     padding-left: 0px;
@@ -3236,7 +3392,7 @@
     left: 6px;
   }
   .main-catalog__good-data {
-    margin-top: 163px;
+    margin-top: 160px;
     max-width: 142px;
   }
   .main-catalog__good-header {
@@ -3254,7 +3410,7 @@
     font-size: 16px;
     line-height: 16px;
     padding-top: 8px;
-    padding-bottom: 6px;
+    padding-bottom: 8px;
     border-bottom: 1px solid #cdcdcd;
     width: 178px;
     margin-left: 3px;
@@ -3263,6 +3419,7 @@
     margin-right: 0;
     margin-top: 1px;
     margin-left: 2px;
+    max-width: 55px;
   }
   .main-catalog__good-volume-numbers {
     margin-top: 2px;
@@ -3286,7 +3443,7 @@
   .main-catalog__good-order {
     padding: 10px 76px 11px 53px;
     margin-left: 0;
-    margin-top: 36px;
+    margin-top: 32px;
   }
   .main-catalog__goods {
     justify-content: inherit;
@@ -3321,8 +3478,8 @@
   }
   .main__catalog-image {
     position: absolute;
-    left: -40px;
-    top: -45px;
+    left: -38px;
+    top: -48px;
   }
   .main__catalog--second-image {
     top: -82px;
@@ -3331,10 +3488,10 @@
     top: -82px;
   }
   .main__catalog--fourth-image {
-    top: -82px;
-    width: 295px;
-    height: 209px;
-    left: -64px;
+    top: -84px;
+    width: 251px;
+    height: 208px;
+    left: -40px;
   }
   .main__catalog--fifth-image {
     width: 248px;
@@ -3356,6 +3513,13 @@
   border-top: 1px solid #ededed;
   border-left: 1px solid #ededed;
   border-right: 1px solid #ededed;
+}
+.find-all-goods__show-all-goods:hover {
+  background-color: #ebebeb;
+}
+.find-all-goods__show-all-goods:active {
+  background-color: #ebebeb;
+  color: #b9b9b9;
 }
 .find-all-goods__plus-mobile-img {
   margin-bottom: 24px;
@@ -3731,6 +3895,7 @@
   }
   .additional-goods__article-header {
     margin-top: 12px;
+    max-width: 160px;
   }
   .additional-goods__article-content {
     margin-top: 0;
